kube-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: <deployment-service-name>
  labels:
    run: <deployment-service-name>
spec:
  type: ClusterIP
  selector:
    app: <deployment-service-name>
  ports:
      - port: 80
        protocol: TCP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: <deployment-service-name>
  labels: 
    app: <deployment-service-name>
    environment: production
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: <deployment-service-name>
  template:
    metadata:
      labels:
        app: <deployment-service-name>
    spec:
      imagePullSecrets:
      - name: <image-secret-if-exist>
      containers:
      - name: <deployment-service-name>
        image: <docker-image>:<image-tag>
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 3
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 3
          timeoutSeconds: 1
